--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,6 @@ RewriteEngine on
 RewriteBase /gym_boutique/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([a-zA-Z0-9\-]+)$   index.php?page=$1
+RewriteRule ^([a-zA-Z0-9\-]+)$   home.php?page=$1
 
 
